--- a/openapi/paths/user-rest-v2-login.yaml
+++ b/openapi/paths/user-rest-v2-login.yaml
@@ -1,18 +1,26 @@
-get:
+post:
   tags:
-    - ms-user
-  summary: login
-  description: login to lanjingerp
-  operationId: user/rest/v2/login
+    -  ms-user
+  summary: Operation summary
+  description: |
+    Operation description **Markdown**.
+  operationId: login
   security:
     - api_key: []
     - basic_auth: []
+  requestBody:
+    content:
+      application/json:
+        schema:
+          $ref: ../components/schemas/Login.yaml
+    description: requestBody description
+    required: true
   responses:
     '200':
       description: OK
       headers:
         X-Rate-Limit:
-          description: calls per hour allowed by the user
+          description: Calls per hour allowed by the user.
           schema:
             type: integer
             format: int32
@@ -21,34 +29,6 @@ get:
       content:
         application/json:
           schema:
-            type: string
-          examples:
-            response:
-              value: Hello world!
-        application/xml:
-          schema:
-            type: string
-        text/csv:
-          schema:
-            type: string
-    '400': 
-      description: Unauthorized
-  requestBody:
-    content:
-      application/json:
-        schema:
-          type: string
-          example: Hello world!
-      application/xml:
-        schema:
-          type: string
-          example: Hello world!
-    description: Echo payload
-    required: true
-  x-codeSamples:
-    - lang: "C#"
-      source:
-        $ref: "../code_samples/csharp/echo/post.cs"
-    - lang: PHP
-      source:
-        $ref: ../code_samples/PHP/echo/post.php
+            $ref: ../components/schemas/Login-return.yaml
+    '400':
+      $ref: ../components/responses/Problem.yaml
