--- a/openapi/components/schemas/Login-return.yaml
+++ b/openapi/components/schemas/Login-return.yaml
@@ -1,1 +1,15 @@
+type: object
+title: Login-return
+properties:
+  loginName:
+    description: 登录名
+    type: string
+    examples:
+      - example
+      - sample
+  password:
+    description: 密码
+    type: string
+    examples:
+      - example
 
